# hspfbintoolbox

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BADGES.rst  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  NEWS.txt  README.rst  VERSION  buildout.cfg  detox  publish.py  pyproject.toml  setup.py  shippable.yml  tox.ini
docs/: command_line.rst  conf.py  function_summary.rst  index.rst  make.bat  readme.rst
docsrc/: Makefile  conf.py  function_summary.rst  index.rst  readme.rst
hspfbintoolbox/: hspfbintoolbox.py
src/hspfbintoolbox/: __init__.py  hspfbintoolbox.py
tests/: test_catalog.py  test_extract.py
