[build-system]
requires = [
    "setuptools",
    "wheel",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "hspfbintoolbox"
dynamic = ["readme", "version"]
description = "Reads Hydrological Simulation Program - FORTRAN binary output files."
dependencies = [
    "toolbox_utils >= 1.0.0, < 2.0.0",
    "cltoolbox > 1.1.0",
    "typing_extensions",
    "pydantic",
    "pandas",
    ]
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Tim Cera", email = "tim@cerazone.net"}
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]
keywords = [
    "hspf",
    "binary",
    "hydrologic",
    "simulation",
    "model",
    ]

[project.optional-dependencies]
dev = [
    "black",
    "cleanpy",
    "twine",
    "pytest",
    "coverage",
    "flake8",
    "pytest-cov",
    "pytest-mpl",
    "pre-commit",
    "black-nbconvert",
    "blacken-docs",
    "velin",
    "isort",
    "pyroma",
    "pyupgrade",
    "commitizen",
    "functiontrace",
    ]

[project.scripts]
hspfbintoolbox = "hspfbintoolbox.hspfbintoolbox:main"

[project.urls]
documentation = "https://timcera.bitbucket.io/hspfbintoolbox/docs/index.html#hspfbintoolbox-documentation"
github = "https://github.com/timcera/hspfbintoolbox"
bitbucket = "https://bitbucket.org/timcera/hspfbintoolbox/src/main/"

[tool]

[tool.check-manifest]
ignore = ["docs/_function_autosummary/*",
          ".coverage",
          ".deepsource.toml",
          ".ipynb_checkpoints/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "8.0.0"
tag_format = "v$version"
version_files = ["VERSION"]
update_changelog_on_bump = true

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = "README.rst"}
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["examples*", "tools*", "docs*", "hspfbintoolbox.tests*"]
